# CoralCode

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_EN.md  CMakeLists.txt  LICENSE  README.md  README_EN.md  TODO.md  coralcode  coralcode.cpp  demo  demo.cpp  example.cpp  simple_editor  simple_editor.cpp  simple_text_test  visual_editor  visual_editor.cpp
include/: ClipboardManager.hpp  Editor.hpp  EventHandler.hpp  SyntaxHighlighter.hpp  TextBuffer.hpp  UndoRedoManager.hpp  Viewport.hpp  Window.hpp
src/: SyntaxHighlighter.cpp  main.cpp
src/UI/: TextArea.cpp
